# src/auth/auth.controller.ts
@@ -1,7 +1,16 @@
-import { Controller, Post, Body, UnauthorizedException } from '@nestjs/common';
+import {
+  Controller,
+  Post,
+  Body,
+  UnauthorizedException,
+  UseGuards,
+  Request,
+  BadRequestException,
+} from '@nestjs/common';
 import { AuthService } from './auth.service';
-import { LoginDto } from './auth.dto';
-import { ApiTags, ApiOperation, ApiResponse } from '@nestjs/swagger';
+import { LoginDto } from './dto/login-auth.dto';
+import { ApiTags, ApiOperation, ApiResponse, ApiBearerAuth } from '@nestjs/swagger';
+import { JwtAuthGuard } from '../common/guard/jwt-auth.guard';
 
 @ApiTags('auth') // Agrupa los endpoints bajo "auth"
 @Controller('auth')
@@ -34,6 +43,43 @@ export class AuthController {
       );
     } catch (error) {
       throw new UnauthorizedException('Credenciales inválidas');
+    }
+  }
+
+  @Post('logout')
+  @UseGuards(JwtAuthGuard)
+  @ApiBearerAuth()
+  @ApiOperation({ summary: 'Cerrar sesión' })
+  @ApiResponse({ status: 200, description: 'Cierre de sesión exitoso' })
+  @ApiResponse({ status: 401, description: 'No autorizado' })
+  async logout(@Request() req) {
+    const userId = req.user.tenantId || req.user.userId;
+    const isTenant = req.user.role === 'ADMIN';
+    await this.authService.logout(userId, isTenant);
+    return { message: 'Cierre de sesión exitoso' };
+  }
+
+  @Post('refresh')
+  @ApiOperation({
+    summary: 'Refrescar token de acceso',
+    description: 'Permite a los usuarios obtener un nuevo token de acceso.',
+  })
+  @ApiResponse({
+    status: 200,
+    description: 'Token de acceso actualizado',
+  })
+  @ApiResponse({
+    status: 401,
+    description: 'Refresh token inválido o expirado',
+  })
+  async refreshToken(@Body('refreshToken') refreshToken: string) {
+    if (!refreshToken) {
+      throw new BadRequestException('Refresh token no proporcionado');
+    }
+    try {
+      return await this.authService.refreshToken(refreshToken);
+    } catch (error) {
+      throw new UnauthorizedException('Refresh token inválido o expirado');
     }
   }
 }
